# NESEmulator

./: .gitignore  CMakeLists.txt
cmake_modules/: FindCatch2.cmake
src/: constants.h  main.cpp  utils.cpp  utils.h
src/cpu/: addressingMode.cpp  cpu.cpp  cpu.h
src/display/: debug_display.cpp  debug_display.h  display.cpp  display.h  testDisplay.h
src/initializer/: initializer.h
src/input_handler/: input_handler.cpp  input_handler.h
src/ppu/: ppu.cpp  ppu.h
src/test/: PPUTest.cpp  testDisplayTest.cpp
src/test/cpu/: arithmeticTest.cpp  branchTest.cpp  incrementDecrementTest.cpp  jumpCallTest.cpp  loadStoreTest.cpp  logicalTest.cpp  registerTransferTest.cpp  shiftTest.cpp  stackOperationTest.cpp  statusFlagTest.cpp
